feat(hero): implementar hero section con tipografia display y centrado absoluto

--- a/index.html
+++ b/index.html
@@ -23,6 +23,11 @@
         </ul>
     </aside>
     <aside class="scroll-indicator">SCROLL</aside>
-    <main class="app-container"></main>
+   <main class="app-container">
+        <section id="inicio" class="hero">
+            <h1 class="hero__title">BRIAN</h1>
+            <h2 class="hero__subtitle">Estudiante TUDAI</h2>
+        </section>
+    </main>
 </body>
 </html>
