--- a/index.html
+++ b/index.html
@@ -28,6 +28,37 @@
             <h1 class="hero__title">BRIAN</h1>
             <h2 class="hero__subtitle">Estudiante TUDAI</h2>
         </section>
+        <section id="proyectos" class="projects">
+            <div class="projects__grid">
+                <article class="card">
+                    <div class="card__image-container">
+                        <img src="assets/images/placeholder.jpg" alt="Vista previa del proyecto">
+                    </div>
+                    <div class="card__info">
+                        <h3 class="card__title">Proyecto Alpha</h3>
+                        <p class="card__tags">IA, Visión por Computadora</p>
+                    </div>
+                </article>
+                <article class="card">
+                    <div class="card__image-container">
+                        <img src="assets/images/placeholder.jpg" alt="Vista previa del proyecto">
+                    </div>
+                    <div class="card__info">
+                        <h3 class="card__title">Proyecto Beta</h3>
+                        <p class="card__tags">Procesamiento de Lenguaje</p>
+                    </div>
+                </article>
+                <article class="card">
+                    <div class="card__image-container">
+                        <img src="assets/images/placeholder.jpg" alt="Vista previa del proyecto">
+                    </div>
+                    <div class="card__info">
+                        <h3 class="card__title">Proyecto Gamma</h3>
+                        <p class="card__tags">Algoritmos Genéticos</p>
+                    </div>
+                </article>
+            </div>
+        </section>
     </main>
 </body>
 </html>
