feat(ui): implementar estructura base de formulario de contacto

--- a/index.html
+++ b/index.html
@@ -59,6 +59,17 @@
                 </article>
             </div>
         </section>
+        <section id="contacto" class="contact">
+            <div class="contact__card">
+                <h2 class="contact__title">CONTACTO</h2>
+                    <form class="form">
+                        <input type="text" class="form__input" placeholder="Nombre" name="name" required>
+                        <input type="email" class="form__input" placeholder="Email" name="email" required>
+                        <textarea class="form__input" placeholder="Mensaje" name="message" rows="4" required></textarea>
+                        <button type="submit" class="form__submit">ENVIAR MENSAJE</button>
+                    </form>
+            </div>
+        </section>
     </main>
 </body>
 </html>
