feat(ui): implementar indicador de scroll direccional con IntersectionObserver

--- a/index.html
+++ b/index.html
@@ -22,7 +22,11 @@
             <li><a href="#" target="_blank" class="social__link"><i class="fab fa-linkedin-in"></i></a></li>
         </ul>
     </aside>
-    <aside class="scroll-indicator">SCROLL</aside>
+    <aside class="scroll-indicator">
+        <div class="scroll-line line-top"></div>
+        <span class="scroll-text">SCROLL</span>
+        <div class="scroll-line line-bottom"></div>
+    </aside>
    <main class="app-container">
         <section id="inicio" class="hero">
             <h1 class="hero__title">BRIAN</h1>
@@ -71,5 +75,6 @@
             </div>
         </section>
     </main>
+    <script src="js/main.js" defer></script>
 </body>
 </html>
