--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         <section id="contacto" class="contact">
             <div class="contact__card">
                 <h2 class="contact__title">CONTACTO</h2>
-                <form class="form" name="contacto" method="POST" data-netlify="true">
+                <form class="form" name="contacto" method="POST" netlify>
                     <input type="hidden" name="form-name" value="contacto">
                     <input type="text" class="form__input" placeholder="Nombre" name="nombre" required>
                     <input type="email" class="form__input" placeholder="Email" name="email" required>
