--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         </section>
         <section id="proyectos" class="projects">
             <div class="projects__grid">
-                <article class="card">
+                <a href="https://github.com/BrianSuhit" class="card" target="_blank" rel="noopener noreferrer">
                     <div class="card__image-container">
                         <img src="assets/images/placeholder.jpg" alt="Vista previa del proyecto">
                     </div>
@@ -42,8 +42,8 @@
                         <h3 class="card__title">Proyecto Alpha</h3>
                         <p class="card__tags">IA, Visión por Computadora</p>
                     </div>
-                </article>
-                <article class="card">
+                </a>
+                <a href="https://github.com/BrianSuhit" class="card" target="_blank" rel="noopener noreferrer">
                     <div class="card__image-container">
                         <img src="assets/images/placeholder.jpg" alt="Vista previa del proyecto">
                     </div>
@@ -51,8 +51,8 @@
                         <h3 class="card__title">Proyecto Beta</h3>
                         <p class="card__tags">Procesamiento de Lenguaje</p>
                     </div>
-                </article>
-                <article class="card">
+                </a>
+                <a href="https://github.com/BrianSuhit" class="card" target="_blank" rel="noopener noreferrer">
                     <div class="card__image-container">
                         <img src="assets/images/placeholder.jpg" alt="Vista previa del proyecto">
                     </div>
@@ -60,7 +60,7 @@
                         <h3 class="card__title">Proyecto Gamma</h3>
                         <p class="card__tags">Algoritmos Genéticos</p>
                     </div>
-                </article>
+                </a>
             </div>
         </section>
         <section id="contacto" class="contact">
