feat(ui): implementar animacion scroll fade-in en secciones principales

--- a/index.html
+++ b/index.html
@@ -43,11 +43,13 @@
     </aside>
    <main class="app-container">
         <section id="inicio" class="hero">
-            <h1 class="hero__title">BRIAN</h1>
-            <h2 class="hero__subtitle">Estudiante TUDAI</h2>
+            <div class="fade-in">
+                <h1 class="hero__title">BRIAN</h1>
+                <h2 class="hero__subtitle">Estudiante TUDAI</h2>
+            </div>
         </section>
         <section id="proyectos" class="projects">
-            <div class="projects__grid">
+            <div class="projects__grid fade-in">
                 <a href="https://github.com/BrianSuhit" class="card" target="_blank" rel="noopener noreferrer">
                     <div class="card__image-container">
                         <img src="assets/images/placeholder.jpg" alt="Vista previa del proyecto">
@@ -78,7 +80,7 @@
             </div>
         </section>
         <section id="contacto" class="contact">
-            <div class="contact__card">
+            <div class="contact__card fade-in">
                 <h2 class="contact__title">CONTACTO</h2>
                 <form class="form" name="contacto" method="POST" netlify>
                     <input type="hidden" name="form-name" value="contacto">
