feat(ux): agregar pagina de exito personalizada para el formulario

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
         <section id="contacto" class="contact">
             <div class="contact__card fade-in">
                 <h2 class="contact__title">CONTACTO</h2>
-                <form class="form" name="contacto" method="POST" netlify>
+                <form class="form" name="contacto" method="POST" netlify action="/success.html">
                     <input type="hidden" name="form-name" value="contacto">
                     <input type="text" class="form__input" placeholder="Nombre" name="nombre" required>
                     <input type="email" class="form__input" placeholder="Email" name="email" required>
