style(success): encapsular mensaje de exito en tarjeta contact-card y ajustar boton

--- a/success.html
+++ b/success.html
@@ -9,14 +9,16 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/geist-mono/dist/fonts.css">
 </head>
 <body>
-    <div class="app-container">
-        <section class="hero" style="text-align: center;">
-            <i class="fas fa-check-circle" style="font-size: 4rem; margin-bottom: 1rem; color: #28a745;"></i>
-            <h1>MENSAJE ENVIADO</h1>
-            <p>Gracias por contactarme. Te responderé a la brevedad.</p>
-            <a href="/" class="form__submit">VOLVER AL INICIO</a>
+    <main class="app-container">
+        <section class="hero">
+            <div class="contact__card" style="text-align: center;">
+                <i class="fas fa-check-circle" style="font-size: 4rem; margin-bottom: 1rem; color: #28a745;"></i>
+                <h1>MENSAJE ENVIADO</h1>
+                <p>Gracias por contactarme. Te responderé a la brevedad.</p>
+                <a href="/" class="form__submit" style="width: auto; display: inline-block; padding: 1rem 3rem;">VOLVER AL INICIO</a>
+            </div>
         </section>
-    </div>
+    </main>
     <script src="js/main.js"></script>
 </body>
 </html>
