feat(projects): agregar links, titulos y descripcion de proyectos nuevos

--- a/index.html
+++ b/index.html
@@ -52,31 +52,31 @@
         </section>
         <section id="proyectos" class="projects">
             <div class="projects__grid fade-in">
-                <a href="https://github.com/BrianSuhit" class="card" target="_blank" rel="noopener noreferrer">
+                <a href="https://github.com/BrianSuhit/python-ai-journey/tree/main/01-chatbot" class="card" target="_blank" rel="noopener noreferrer">
                     <div class="card__image-container">
                         <img src="assets/images/placeholder.jpg" alt="Vista previa del proyecto">
                     </div>
                     <div class="card__info">
-                        <h3 class="card__title">Proyecto Alpha</h3>
-                        <p class="card__tags">IA, Visión por Computadora</p>
+                        <h3 class="card__title">Proyecto 01 - Chatbot</h3>
+                        <p class="card__tags">Asistente virtual clásico basado en reglas.</p>
                     </div>
                 </a>
-                <a href="https://github.com/BrianSuhit" class="card" target="_blank" rel="noopener noreferrer">
+                <a href="https://github.com/BrianSuhit/python-ai-journey/tree/main/02-sentiment-analysis" class="card" target="_blank" rel="noopener noreferrer">
                     <div class="card__image-container">
                         <img src="assets/images/placeholder.jpg" alt="Vista previa del proyecto">
                     </div>
                     <div class="card__info">
-                        <h3 class="card__title">Proyecto Beta</h3>
-                        <p class="card__tags">Procesamiento de Lenguaje</p>
+                        <h3 class="card__title">Proyecto 02 - Sentiment Analysis</h3>
+                        <p class="card__tags">Análisis de sentimiento básico mediante NLP (Procesamiento de Lenguaje Natural).</p>
                     </div>
                 </a>
-                <a href="https://github.com/BrianSuhit" class="card" target="_blank" rel="noopener noreferrer">
+                <a href="https://github.com/BrianSuhit/python-ai-journey/tree/main/03-data-extractor" class="card" target="_blank" rel="noopener noreferrer">
                     <div class="card__image-container">
                         <img src="assets/images/placeholder.jpg" alt="Vista previa del proyecto">
                     </div>
                     <div class="card__info">
-                        <h3 class="card__title">Proyecto Gamma</h3>
-                        <p class="card__tags">Algoritmos Genéticos</p>
+                        <h3 class="card__title">Proyecto 03 - Data Extractor</h3>
+                        <p class="card__tags">Simulación básica de NER (Named Entity Recognition), extrayendo información de un texto.</p>
                     </div>
                 </a>
             </div>
