refactor(ui): simplificar seccion de proyectos a grid responsive estandar

--- a/index.html
+++ b/index.html
@@ -79,6 +79,24 @@
                         <p class="card__tags">Simulación básica de NER (Named Entity Recognition), extrayendo información de un texto.</p>
                     </div>
                 </a>
+                <a href="https://github.com/BrianSuhit/python-ai-journey/tree/main/04-knn-visual" class="card" target="_blank" rel="noopener noreferrer">
+                    <div class="card__image-container">
+                        <img src="assets/images/placeholder.jpg" alt="Vista previa del proyecto">
+                    </div>
+                    <div class="card__info">
+                        <h3 class="card__title">Proyecto 04 - Clasificador Visual KNN</h3>
+                        <p class="card__tags">Algoritmo basico de KKN para clasificar datos en un grafico</p>
+                    </div>
+                </a>
+                <a href="https://github.com/BrianSuhit/python-ai-journey/tree/main/05-markov-chain" class="card" target="_blank" rel="noopener noreferrer">
+                    <div class="card__image-container">
+                        <img src="assets/images/placeholder.jpg" alt="Vista previa del proyecto">
+                    </div>
+                    <div class="card__info">
+                        <h3 class="card__title">Proyecto 05 - Generador de Texto (Markov Chains)</h3>
+                        <p class="card__tags">Cadena de Markov, un modelo probabilístico que predice la "siguiente palabra" basándose en el estado actual</p>
+                    </div>
+                </a>
             </div>
         </section>
         <section id="contacto" class="contact">
